--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -1,6 +1,40 @@
-body{
-    
+* {
+    margin: 0;
+    font-family: 'Work Sans';
+}
+body {
+
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+}
+
+.banner-title {
+    font-weight: 700;
+    font-size: 65px;
+    line-height: 76px;
+    text-align: right;
+    color: #151414;
+    position: absolute;
+    width: 525px;
+    height: 228px;
+    left: 845px;
+    top: 216px;
+}
+
+.banner-description {
+    font-size: 16px;
+    text-align: right;
+    position: absolute;
+    width: 494px;
+    height: 78px;
+    left: 876px;
+    top: 468px;
+.btn-primary{
+    
+    width: 160px;
+    height: 64px;
+    left: 1210px;
+    top: 578px;
+    
 }
