--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -1,7 +1,26 @@
 * {
     margin: 0;
-    font-family: 'Work Sans';
+    font-family: 'Open Sans', sans-serif;
 }
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+.nav-title{
+    
+    
+    padding: 50px 200px;
+    
+}
+nav ul{
+    display: flex;
+    align-items: center;
+}
+nav li{
+    list-style: none;
+    margin-left: 50px;
+}
+
 body {
 
     background-repeat: no-repeat;
