--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -145,6 +145,11 @@ body {
     margin-top: 130px;
 }
 
+.my-plan-container {
+    display: flex;
+    gap: 86px;
+}
+
 .section-title {
     position: absolute;
     width: 179px;
@@ -157,16 +162,7 @@ body {
 
 }
 
-.skill-in-future {
-    position: absolute;
-    width: 92.96px;
-    height: 92.96px;
-    left: 320px;
-    top: 1889px;
-
-}
-
-.skill-title {
+.skill-title-one {
     position: absolute;
     width: 270px;
     height: 35px;
@@ -200,4 +196,129 @@ body {
     height: 92.96px;
     left: 320px;
     top: 1889px;
+}
+
+.skill-title-one {
+    position: absolute;
+    width: 270px;
+    height: 35px;
+    left: 230px;
+    top: 2012.26px;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    color: #151414;
+
+}
+
+.skill-description-one {
+    position: absolute;
+    width: 177px;
+    height: 29px;
+    left: 277px;
+    top: 2063.26px;
+    font-weight: 500;
+    font-size: 25px;
+    color: #737272;
+    margin-top: 16px;
+}
+
+.picture-two {
+    position: absolute;
+    width: 92.96px;
+    height: 92.96px;
+    left: 631px;
+    top: 1889px;
+}
+
+.skill-title-two {
+    position: absolute;
+    width: 156px;
+    height: 35px;
+    left: 599px;
+    top: 2022.26px;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    color: #151414;
+}
+
+.skill-description-two {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 29px;
+    text-align: center;
+    position: absolute;
+    width: 181px;
+    height: 29px;
+    left: 586px;
+    top: 2057.3px;
+    margin-top: 16px;
+    color: #737272;
+}
+
+.picture-three {
+    position: absolute;
+    width: 93px;
+    height: 93px;
+    left: 916px;
+    top: 1889.3px;
+}
+
+.skill-title-three {
+    position: absolute;
+    width: 218px;
+    height: 35px;
+    left: 853px;
+    top: 2018.3px;
+    font-size: 30px;
+    line-height: 35px;
+    color: #151414;
+    text-align: center;
+}
+
+.skill-description-three {
+    position: absolute;
+    width: 164px;
+    height: 29px;
+    left: 880px;
+    top: 2057.3px;
+    font-size: 25px;
+    line-height: 29px;
+    text-align: center;
+    color: #737272;
+    margin-top: 16px;
+}
+
+.picture-four {
+    position: absolute;
+    width: 92.96px;
+    height: 92.96px;
+    left: 1218px;
+    top: 1889.3px;
+}
+
+.skill-title-four {
+    position: absolute;
+    width: 174px;
+    height: 35px;
+    left: 1177px;
+    top: 2006.3px;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    color: #151414;
+}
+
+.skill-description-four {
+    position: absolute;
+    width: 214px;
+    height: 29px;
+    left: 1157px;
+    top: 2057.3px;
+    font-size: 25px;
+    line-height: 29px;
+    text-align: center;
+    color: #737272;
+    margin-top: 16px;
 }
