--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -303,7 +304,7 @@ body {
     width: 174px;
     height: 35px;
     left: 1177px;
-    top: 2006.3px;
+    top: 2012.3px;
     font-size: 30px;
     line-height: 35px;
     text-align: center;
@@ -322,3 +323,28 @@ body {
     color: #737272;
     margin-top: 16px;
 }
+
+/* linier gradient style */
+
+h3 {
+    position: absolute;
+    width: 459px;
+    height: 94px;
+    left: 294px;
+    top: 2275.3px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+
+}
+.gradient {
+    position: absolute;
+    width: 1140px;
+    height: 300px;
+    left: 230px;
+    top: 2216.3px;
+    border-radius: 8px;
+    background-image: url(gradient2.png);
+    background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url(watch.png);
+}
+
