--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -326,17 +326,81 @@ body {
 
 /* linier gradient style */
 
-h3 {
+h1 {
     position: absolute;
     width: 459px;
     height: 94px;
-    left: 294px;
-    top: 2275.3px;
+    left: 94px;
+    top: 75.3px;
     font-weight: 700;
     font-size: 40px;
     line-height: 47px;
+    color: #FFFFFF;
 
 }
+
+.btn {
+    position: absolute;
+    width: 160px;
+    height: 64px;
+    left: 94px;
+    top: 173.3px;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    border-radius: 5px;
+    color: #F15B22;
+    margin-top: 24px;
+}
+
+/* footer style */
+
+.footer-title {
+    position: absolute;
+    width: 148px;
+    height: 53px;
+    left: 230px;
+    top: 2776.3px;
+    font-size: 45px;
+    color: black;
+}
+
+.footer-describtion {
+    position: absolute;
+    width: 485px;
+    height: 78px;
+    left: 230px;
+    top: 2845.3px;
+    font-size: 16px;
+}
+
+.mail {
+    position: absolute;
+    width: 184px;
+    height: 26px;
+    left: 230px;
+    top: 2947.3px;
+    font-size: 16px;
+}
+
+.phn {
+    position: absolute;
+    width: 186px;
+    height: 26px;
+    left: 230px;
+    top: 2989.3px;
+    font-size: 16px;
+}
+
+.first-image {
+    position: absolute;
+    width: 47px;
+    height: 46px;
+    left: 230px;
+    top: 3047.3px;
+
+}
+
 .gradient {
     position: absolute;
     width: 1140px;
@@ -347,4 +411,3 @@ h3 {
     background-image: url(gradient2.png);
     background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url(watch.png);
 }
-
