--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -365,6 +365,11 @@ h1 {
     color: black;
 }
 
+.footer-section {
+    display: flex;
+    background-color: ;
+}
+
 .footer-describtion {
     position: absolute;
     width: 485px;
@@ -381,6 +386,7 @@ h1 {
     left: 230px;
     top: 2947.3px;
     font-size: 16px;
+
 }
 
 .phn {
@@ -392,13 +398,29 @@ h1 {
     font-size: 16px;
 }
 
-.first-image {
+.first-img {
     position: absolute;
     width: 47px;
     height: 46px;
     left: 230px;
-    top: 3047.3px;
+    top: 3043.3px;
 
+}
+
+.second-img {
+    position: absolute;
+    width: 47px;
+    height: 45.42px;
+    left: 294px;
+    top: 3043.88px;
+}
+
+.third-img {
+    position: absolute;
+    width: 46px;
+    height: 45.42px;
+    left: 359px;
+    top: 3043.88px;
 }
 
 .gradient {
@@ -410,4 +432,31 @@ h1 {
     border-radius: 8px;
     background-image: url(gradient2.png);
     background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url(watch.png);
+}
+
+/* subcribe style */
+.contact-title {
+    position: absolute;
+    width: 123px;
+    height: 29px;
+    left: 1046px;
+    top: 2776.3px;
+    font-size: 25px;
+}
+
+.contact-mail {
+    position: absolute;
+    width: 325px;
+    height: 144px;
+    left: 1046px;
+    top: 2836.3px;
+}
+
+.btn-two {
+    position: absolute;
+    width: 170.11px;
+    height: 64px;
+    left: 1046px;
+    top: 2916.3px;
+    border-radius: 5px;
 }
